--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,44 @@
-.logo.vite:hover {
-  filter: drop-shadow(0 0 2em #747bff);
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafb);
+.app {
+  text-align: center;
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.title {
+  font-size: 2em;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.scene {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background-color: #f5f5f5;
+}
+
+.overlay {
+  pointer-events: none; /* Make the overlay content non-interactive */
+  left: 0;
+  top: 0;
+  position: absolute;
+  width: 100%; /* Cover the full width of the parent */
+  height: 100%; /* Cover 10% of the height of the parent */
+  background-color: rgba(255, 255, 255, 0.1); /* Semi-transparent white overlay */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #000; /* Adjust text color as needed */
+  /* Add more styles for your overlay content as needed */
 }
