--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,9 @@ body {
 
 .app {
   text-align: center;
+  overflow: hidden;
   display: flex;
+  overflow: hidden;
   height: 100vh;
   width: 100vw;
   flex-direction: column;
@@ -29,6 +31,7 @@ body {
 }
 
 .overlay {
+  overflow: hidden;
   pointer-events: none; /* Make the overlay content non-interactive */
   left: 0;
   top: 0;
