--- a/src/OverlayElements/DrawerMenu.css
+++ b/src/OverlayElements/DrawerMenu.css
@@ -6,7 +6,9 @@
   padding-right: 10px;
   right: 0;
   top: 50%;
-  transform: translate(300px, -50%);
+  height: 100%;
+  min-width: 30vw;
+  transform: translate(30vw, -50%); 
   transition: transform 0.3s ease-in-out;
 }
 
@@ -17,7 +19,7 @@
   flex-direction: column;
   background-color: #f8f9fa;
   height: 100%;
-  width: 120px;
+  width: 100px;
 }
 
 .drawer-menu-container:hover {
@@ -33,8 +35,8 @@
   align-items: center;
   background-color: #f8f9fa;
   opacity: 0.75;
-  height: 600px;
-  width: 300px;
+  height: 100%;
+  width: 30vw;
   z-index: 200;
 }
 
