--- a/src/OverlayElements/DrawerMenu.css
+++ b/src/OverlayElements/DrawerMenu.css
@@ -1,5 +1,5 @@
 .drawer-menu-container {
-  pointer-events: auto;
+  pointer-events: all;
   display: flex;
   flex-direction: row;
   position: absolute;
@@ -8,12 +8,11 @@
   top: 50%;
   height: 100%;
   min-width: 30vw;
-  transform: translate(30vw, -50%); 
+  transform: translate(calc(34vw + 30px), -50%); 
   transition: transform 0.3s ease-in-out;
 }
 
 .drawer-menu-side-panel {
-  z-index: 100;
   pointer-events: auto;
   display: flex;
   flex-direction: column;
@@ -28,16 +27,74 @@
 }
 
 .drawer-menu {
+  padding: 10px;
   pointer-events: auto;
   display: flex;
   border-radius: 5px;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   background-color: #303030;
   opacity: 0.75;
   height: 100%;
-  width: 30vw;
-  z-index: 200;
+  width: 34vw;
 }
 
+.drawer-menu-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  width: 100%;
+  padding: 20px;
+}
+
+.drawer-menu-tile-config {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+}
+
+.drawer-menu-height-slider {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  height: 100vh;
+  max-height: 400px;
+  min-height: 200px;
+  width: 50px;
+  padding-top: 20px;
+}
+
+.drawer-menu-deploy-action {
+  padding: 20px;
+  display: flex;
+  gap: 15px;
+  flex-direction: column;
+  align-items: center;
+  min-width: 150px;
+  width: 75%;
+  height: 100%;
+  min-width: 125px;
+  max-width: 250px;
+  min-height: 200px;
+  max-height: 400px;
+  padding-top: 20px;
+}
+
+.drawer-menu-unit-config {
+  display: flex;
+  margin-bottom: 20px;
+  overflow-y: scroll;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-content: flex-start;
+  gap: 10px;
+}
