--- a/src/OverlayElements/DrawerMenu.css
+++ b/src/OverlayElements/DrawerMenu.css
@@ -60,6 +60,19 @@
   width: 100%;
 }
 
+.drawer-menu-height {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  height: 100vh;
+  max-height: 400px;
+  min-height: 200px;
+  width: 50px;
+  padding-top: 20px;
+}
+
 .drawer-menu-height-slider {
   display: flex;
   flex-direction: column;
@@ -71,6 +84,13 @@
   min-height: 200px;
   width: 50px;
   padding-top: 20px;
+}
+
+.drawer-menu-slider-config {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .drawer-menu-deploy-action {
