--- a/src/OverlayElements/DrawerMenu.css
+++ b/src/OverlayElements/DrawerMenu.css
@@ -6,6 +6,7 @@
   padding-right: 10px;
   right: 0;
   top: 50%;
+  z-index: 110;
   height: 100%;
   min-width: 30vw;
   transform: translate(calc(34vw + 30px), -50%); 
@@ -17,12 +18,13 @@
   display: flex;
   flex-direction: column;
   padding-top: 10px;
+  z-index: 120;
   opacity: 0.75;
   height: 100%;
   width: 50px;
 }
 
-.drawer-menu-container:hover {
+.drawer-menu-container.open {
   transform: translate(0, -50%);
 }
 
@@ -52,10 +54,11 @@
 
 .drawer-menu-tile-config {
   display: flex;
-  flex-direction: row;
+  flex-direction: column; 
+  margin-bottom: 20px;
+  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  flex-wrap: wrap;
   gap: 10px;
   width: 100%;
 }
@@ -64,6 +67,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
+  gap: 10px;
+  height: 100vh;
+  overflow-y: scroll;
+  padding-top: 20px;
+}
+
+.drawer-menu-height-adjustments {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   justify-content: center;
   gap: 10px;
   height: 100vh;
@@ -71,6 +85,14 @@
   min-height: 200px;
   width: 50px;
   padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.drawer-menu-slider-delta {
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  justify-content: center;
 }
 
 .drawer-menu-height-slider {
@@ -78,8 +100,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10px;
-  height: 100vh;
+  height: 50vh;
   max-height: 400px;
   min-height: 200px;
   width: 50px;
@@ -119,4 +140,12 @@
   justify-content: center;
   align-content: flex-start;
   gap: 10px;
+}
+
+.drawer-position-config-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
