--- a/src/OverlayElements/DrawerMenu.css
+++ b/src/OverlayElements/DrawerMenu.css
@@ -60,7 +60,7 @@
   justify-content: space-evenly;
   align-items: center;
   gap: 10px;
-  width: 100%;
+  width: 350px;
 }
 
 .drawer-menu-height {
@@ -147,5 +147,4 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
 }
